--- a/SalaryCalculato/index.html
+++ b/SalaryCalculato/index.html
@@ -42,7 +42,7 @@
                         <input type="number" v-model="stockPercent" class="form-control" />
                     </div>
                     <div class="form-group col-md-6">
-                        <label>存利(%):</label>
+                        <label>每年股利(%):</label>
                         <input type="number" v-model="stockBonus" class="form-control" />
                     </div>
                 </div>
