--- a/SalaryCalculato/index.html
+++ b/SalaryCalculato/index.html
@@ -7,53 +7,64 @@
     <title>員工年薪計算器</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <style>
+        h1 {
+            font-family: 'Comfortaa', cursive;
+        }
+    </style>
 </head>
 
 <body>
     <div id="app" class="container">
         <div class="row justify-content-center mt-5">
-            <div class="card mt-5">
-                <div class="card-header">
-                    <h1>員工年薪計算器</h1>
-                </div>
-                <div class="card-body row">
-                    <div class="form-group col-md-6">
-                        <label>產出期限(年):</label>
-                        <input type="number" v-model="seniority" class="form-control" />
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>月薪:</label>
-                        <input type="number" v-model="salary" class="form-control" />
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>每年調薪(%):</label>
-                        <input type="number" v-model="raisePercent" class="form-control" />
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>每月生活費預定:</label>
-                        <input type="number" v-model="monthlyCost" class="form-control" />
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>儲蓄率(%):</label>
-                        <input type="number" v-model="savingsPercent" class="form-control" />
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>存股率(%):</label>
-                        <input type="number" v-model="stockPercent" class="form-control" />
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>每年股利(%):</label>
-                        <input type="number" v-model="stockBonus" class="form-control" />
+            <div class="col text-center p-3 mb-3 rounded">
+                <h1>SalaryCalculato</h1>
+            </div>
+            <div class="card rounded-0">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="form-group col-12 col-md-6">
+                            <label>產出期限(年):</label>
+                            <input type="number" v-model="seniority" class="form-control" />
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label>月薪:</label>
+                            <input type="number" v-model="salary" class="form-control" />
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label>每年調薪(%):</label>
+                            <input type="number" v-model="raisePercent" class="form-control" />
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label>每月生活費預定:</label>
+                            <input type="number" v-model="monthlyCost" class="form-control" />
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label>儲蓄率(%):</label>
+                            <input type="number" v-model="savingsPercent" class="form-control" />
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label>存股率(%):</label>
+                            <input type="number" v-model="stockPercent" class="form-control" />
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label>每年股利(%):</label>
+                            <input type="number" v-model="stockBonus" class="form-control" />
+                        </div>
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button @click="calculate" class="btn btn-success">計算</button>
-                    <button v-if="showTable" @click="reset" class="btn btn-danger ml-2">重新計算</button>
+                    <div class="row justify-content-center">
+                        <button v-if="!showTable" @click="calculate" class="btn btn-light">計算</button>
+                        <button v-else="showTable" @click="reset" class="btn btn-secondary ml-auto">重新計算</button>
+                    </div>
                 </div>
             </div>
-
-            <table v-if="showTable" class="table">
-                <thead>
+            <table v-if="showTable" class="table table-striped mt-3">
+                <thead class="bg-light">
                     <tr>
                         <th>年度</th>
                         <th>月薪</th>
@@ -89,6 +100,7 @@
                     savingsPercent: 0,
                     monthlyCost: 0,
                     stockPercent: 0,
+                    stockBonus: 0,
                     showTable: false,
                     yearlySalaries: [],
                 };
@@ -103,12 +115,15 @@
                 stock() {
                     return (this.salary - this.monthlyCost) * (this.stockPercent / 100);
                 },
-                bonus(){
+                bonus() {
                     return this.stockBonus / 100
                 }
             },
             methods: {
                 calculate() {
+                    if(this.savingsPercent + this.stockPercent != 100){
+                       return alert('儲蓄 + 存股 必須等於 100');
+                    }
                     this.yearlySalaries = [];
                     let yearlySavings = 0;
                     let yearlyStock = 0;
